--- a/EIApp.html
+++ b/EIApp.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./main.css">
-<title>Excel Interiors</title>
+<title>A. Schuette Design</title>
 
-<div><a href="./index.html">← Go Back</a></div>
+<div><a href="./index.html">Go Back</a></div>
 <div>
     <div class="flex">
         <img class="EI" src="./img/Excel Interiors/EIASignin.png" />
