--- a/Mr.html
+++ b/Mr.html
@@ -1,10 +1,12 @@
 <link rel="stylesheet" href="./main.css">
-<title>Mr. The Movie Renderer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>A. Schuette Design</title>
 
-<div><a href="./index.html">← Go Back</a></div>
+<div><a href="./index.html">Go Back</a></div>
 <div>
     <div class="flex">
-        <img class="MR" src="./img/Mr/moviepage.png" />
+        <a target="_blank" href="http://coordinated-zephyr.surge.sh/"><img class="MR" src="./img/Mr/moviepage.png" /></a>
         <p><a class="project-link" target="_blank" href="http://coordinated-zephyr.surge.sh/">Mr. The Movie Renderer</a> 
             is a React application I developed and designed using the RESTful API, The
             Movie Database (TMDb).
