--- a/EIWebsite.html
+++ b/EIWebsite.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="./main.css">
-<title>Excel Interiors</title>
+<title>A. Schuette Design</title>
 
-<div><a href="./index.html">← Go Back</a></div>
+<div><a href="./index.html">Go Back</a></div>
 <div>
     <div class="flex">
-        <img class="EI" src="./img/Excel Interiors/ExcelInteriorsHome.png" />
+        <a target="_blank" href="https://www.excelinteriorsmn.com/"><img class="EI" src="./img/Excel Interiors/ExcelInteriorsHome.png" /></a>
         <p><a class="project-link" target="_blank" href="https://www.excelinteriorsmn.com/">Excel Interiors</a> 
             specializes in re-upholstery, repair and refinishing of furniture. 
             I gave them a complete re-design of their existing website to offer 
