Fixed links and added favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>A. Schuette Design</title>
 
     <!--styles-->
@@ -11,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900" rel="stylesheet">
 
     <link rel="stylesheet" href="./main.css">
+    <link rel="shortcut icon" href="./img/Alogo.ico">
 </head>
 
 <body>
@@ -29,15 +31,19 @@
                 <li>
                     <bold>What I've Done:</bold>
                 </li>
-                <li><a href="./Mr.html">- Mr.</a></li>
                 <li>- Excel Interiors</li>
                 <li><a href="./EIWebsite.html">- Website</a></li>
                 <li><a href="./EIApp.html">- Customer Management Application</a></li>
                 <li>
+                <li><a href="./Mr.html">- Mr. The Movie Renderer</a></li>
+                
                     <bold>My Qualifications:</bold>
                 </li>
                 <li>- BA - Marketing</li>
                 <li>- Web Development <a id="DevMountain" target="_blank" href="https://devmountain.com/web-bootcamp-immersive?location=provo">@DevMountain</a></li>
+                <li>
+                    <bold>Contact Me:</bold>
+                </li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/ashley-schuette-7366686b/">○ LinkedIn</a></li>
                 <li><a target="_blank" href="https://github.com/ashleyschuette">○ GitHub</a></li>
                 <li><a href="mailto:ashleyschuette2@gmail.com">○ Email</a></li>
