--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <bold>What I've Done:</bold>
                 </li>
                 <li>- Excel Interiors</li>
-                <li><a href="./EIWebsite.html">- Website</a></li>
-                <li><a href="./EIApp.html">- Customer Management Application</a></li>
+                <li><a href="./ExcelInteriorsWebsite.html">- Website</a></li>
+                <li><a href="./CustomerManagementApp.html">- Customer Management Application</a></li>
                 <li>
                 <li><a href="./Mr.html">- Mr. The Movie Renderer</a></li>
                 
