--- a/ExcelInteriorsWebsite.html
+++ b/ExcelInteriorsWebsite.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="./main.css">
+<link rel="shortcut icon" href="./img/Alogo.ico">
 <title>A. Schuette Design</title>
 
 <div><a href="./index.html">Go Back</a></div>
