--- a/Mr.html
+++ b/Mr.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="./main.css">
+<link rel="shortcut icon" href="./img/Alogo.ico">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>A. Schuette Design</title>
