Added Blind Effort

--- a/ExcelInteriorsWebsite.html
+++ b/ExcelInteriorsWebsite.html
@@ -9,7 +9,11 @@
         <p><a class="project-link" target="_blank" href="https://www.excelinteriorsmn.com/">Excel Interiors</a> 
             specializes in re-upholstery, repair and refinishing of furniture. 
             I gave them a complete re-design of their existing website to offer 
-            a more clean and modern feel.
+            a more clean and modern feel using:
+            <br>
+                - Wix
+                <br>
+                - 123 Form Builder
             <br>
             <br>
             The <bold><italic>homepage</italic></bold> features a full-width carousel which displays popular 
