--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <li><a href="./ExcelInteriorsWebsite.html">- Website</a></li>
                 <li><a href="./CustomerManagementApp.html">- Customer Management Application</a></li>
                 <li>
+                <li><a href="./BlindEffort.html">- Blind Effort</a></li>
+                
                 <li><a href="./Mr.html">- Mr. The Movie Renderer</a></li>
                 
                     <bold>My Qualifications:</bold>
