--- a/BlindEffort.html
+++ b/BlindEffort.html
@@ -43,7 +43,7 @@
             <br>
             - Coding a majority of the CSS and HTML for every component
             <br>
-            - Implementing Vue animations in conjunction with CSS animations on the resume selector page (pass or shortlist buttons)
+            - Implementing Vue animations in conjunction with CSS animations on the resume selector page
             <br>
             - Writing javascript to allow the resume and job editors to conditionally render
             <br>
