--- a/BlindEffort.html
+++ b/BlindEffort.html
@@ -39,7 +39,7 @@
             <br>
             - Designing the logo in Photoshop
             <br>
-            - Implementing a typewriter npm package and writing javascript, so it would fit our needs
+            - Implementing a typewriter npm package and writing custom javascript, so it would fit our needs
             <br>
             - Coding a majority of the CSS and HTML for every component
             <br>
